
Fri Jul 7 16:22:49 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove LDFLAGS, it's set by configure.

Fri Jun  9 19:25:47 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Wed May 24 06:52:41 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* gssapiP_generic.h: Include k5-sockets.h now that k5-config.h
		does not include netdb.h.

Mon May 22 10:08:13 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in	- Install EXPORTED_HEADERS in gssapi subdirectory of
			  KRB5_INCDIR.
	* configure.in	- Find KRB5ROOT and install program.

Sat Apr 29 15:29:15 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* gssapi.h: Only define PROTOTYPE if it is not deined at all.

Fri Apr 21 10:57:44 1995  Ezra Peisach  (epeisach@kangaroo.mit.edu)

	* gssapi.h: If !stdc and !windows, define PROTOTYPE properly.

Thu Apr 20 14:23:14 1995 Keith Vetter (keithv@fusion.com)

	* gssapi.h: fixed up the "windows specific hackery".

Thu Apr 20 11:41:04 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Add checking for SIZEOF_SHORT, SIZEOF_INT, and
		SIZEOF_LONG, so we don't need to depend on getting this
		information from include/krb5/autoconf.h

	* gssapi.h: Removed dependence on krb5 include files.

	* gssapiP_generic.h: We need to include k5-config in order to get
		Windows specific hackery.  Somewhat of a wart, but this is
		a gssapi internal header file, so the rest of the world
		doesn't have to see this.

	* util_token.c: Define VALID_INT, instead of relying on this being
		defined by krb5.h.

Thu Apr 13 16:27:56 1995 Keith Vetter (keithv@fusion.com)

	* gssapi_e.c: __STDC__ conditional also checks the _WINDOWS define.
	* *.[ch]: removed unneeded INTERFACE from non-api functions.
        * *.h added FAR to pointers visible at to the world.

Tue Mar 28 18:28:03 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (unixmac):  Add to build header files.
